test/Fail/Issue2256.err
Issue2256.agda:13.10-14: error: [UnequalTerms]
The terms
  (λ ()) x
and
  A
are not equal at type Set a
when checking that the expression refl has type abs x ≡ A
